Merging fd-batch