@@ -14,24 +14,29 @@
     <parent>
         <artifactId>flockdata</artifactId>
         <groupId>org.flockdata</groupId>
-        <version>0.98-BUILD-SNAPSHOT</version>
+        <version>0.98.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>fd-integration-tests</artifactId>
 
     <properties>
-        <!--<org.springdata.neo4j>3.1.1.RELEASE</org.springdata.neo4j>-->
-        <stormpath.sdk.version>1.0.RC2</stormpath.sdk.version>
-        <stormpath.spring.security.version>0.3.0</stormpath.spring.security.version>
-
-        <!--This variable is passed to fd.search to control the log level. Example
-        mvn clean install -Dfd.integration=amqp -Dfd.auth.provider=simple -Dfd.logLevel=info
-        -->
-        <!--<fd.logLevel>${env.fd.logLevel}</fd.logLevel>-->
+        <language.level>1.8</language.level>
+        <docker-integration.version>1.1.4</docker-integration.version>
     </properties>
 
+
     <dependencies>
+        <!--<dependency>-->
+        <!--<groupId>dk.sublife.docker-integration</groupId>-->
+        <!--<artifactId>docker-integration</artifactId>-->
+        <!--<version>1.0.3</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-kernel</artifactId>
@@ -85,15 +90,14 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>io.searchbox</groupId>
+            <artifactId>jest</artifactId>
+            <version>0.1.6</version>
+        </dependency>
         <dependency>
             <groupId>org.flockdata</groupId>
             <artifactId>fd-engine</artifactId>
@@ -105,9 +109,9 @@
             <version>${project.version}</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.flockdata</groupId>-->
-            <!--<artifactId>fd-search</artifactId>-->
-            <!--<version>${project.version}</version>-->
+        <!--<groupId>org.flockdata</groupId>-->
+        <!--<artifactId>fd-search</artifactId>-->
+        <!--<version>${project.version}</version>-->
         <!--</dependency>-->
         <dependency>
             <groupId>com.rabbitmq</groupId>
@@ -130,59 +134,7 @@
 
             </exclusions>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.apache.tomcat</groupId>-->
-        <!--<artifactId>tomcat-servlet-api</artifactId>-->
-        <!--<version>7.0.30</version>-->
-        <!--&lt;!&ndash;<scope>test</scope>&ndash;&gt;-->
-        <!--</dependency>-->
-
-        <dependency>
-            <groupId>io.searchbox</groupId>
-            <artifactId>jest</artifactId>
-            <version>0.1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.stormpath.sdk</groupId>
-            <artifactId>stormpath-sdk-httpclient</artifactId>
-            <version>${stormpath.sdk.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.stormpath.spring.security</groupId>
-            <artifactId>stormpath-spring-security-core</artifactId>
-            <version>${stormpath.spring.security.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-aop</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-beans</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-framework</artifactId>
-                </exclusion>
-
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-expression</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.data</groupId>-->
-            <!--<artifactId>spring-data-elasticsearch</artifactId>-->
-        <!--</dependency>-->
-
     </dependencies>
-
 
     <build>
         <plugins>
@@ -200,8 +152,62 @@
                     <argLine>-Xmx512m</argLine>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${language.level}</source>
+                    <target>${language.level}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!--https://github.com/wouterd/docker-maven-plugin-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.19.1</version>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>net.wouterdanes.docker</groupId>-->
+            <!--<artifactId>docker-maven-plugin</artifactId>-->
+            <!--<version>5.0.0</version>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>package</id>-->
+            <!--<goals>-->
+            <!--<goal>build-images</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--<configuration>-->
+            <!--<images>-->
+            <!--<image>-->
+            <!--<id>engine</id>-->
+            <!--<dockerFile>../fd-engine/src/main/docker/Dockerfile</dockerFile>-->
+            <!--<artifacts>-->
+            <!--<artifact>-->
+            <!--<file>../fd-engine/target/fd-engine-0.98.1.jar</file>-->
+            <!--</artifact>-->
+            <!--</artifacts>-->
+            <!--</image>-->
+            <!--</images>-->
+            <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
+
     <profiles>
         <profile>
             <id>integration</id>
@@ -237,147 +243,6 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <!-- Trying to get a SpringBoot test working, but need to start fd-search -->
-                    <!--<plugin>-->
-                        <!--<groupId>org.codehaus.mojo</groupId>-->
-                        <!--<artifactId>exec-maven-plugin</artifactId>-->
-                        <!--<version>1.4.0</version>-->
-                        <!--<executions>-->
-                            <!--<execution>-->
-                                <!--<id>default-cli</id>-->
-                                <!--<goals>-->
-                                    <!--<goal>exec</goal>-->
-                                <!--</goals>-->
-                                <!--<configuration>-->
-                                    <!--<executable>java</executable>-->
-                                    <!--<profiles>-->
-                                        <!--<profile>integration</profile>-->
-                                    <!--</profiles>-->
-                                    <!--&lt;!&ndash; optional &ndash;&gt;-->
-                                    <!--<workingDirectory>../fd-search</workingDirectory>-->
-                                    <!--<arguments>-->
-                                        <!--<argument>-jar</argument>-->
-                                        <!--<argument>${basedir}/target/fd-search-${project.version}.jar</argument>-->
-                                        <!--<argument>port=9091</argument>-->
-                                    <!--</arguments>-->
-                                <!--</configuration>-->
-                            <!--</execution>-->
-                        <!--</executions>-->
-                    <!--</plugin>-->
-                    <!--<plugin>-->
-                        <!--<groupId>org.springframework.boot</groupId>-->
-                        <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
-                        <!--<version>${org.springboot.version}</version>-->
-                        <!--<configuration>-->
-                            <!--<mainClass>org.flockdata.search.FdSearch</mainClass>-->
-                            <!--<useTestClasspath>true</useTestClasspath>-->
-                            <!--<classesDirectory>../fd-search/target/classes</classesDirectory>-->
-                            <!--<profiles>-->
-                                <!--<profile>integration</profile>-->
-                            <!--</profiles>-->
-                            <!--<arguments>-->
-                                <!--<argument>port=9091</argument>-->
-                            <!--</arguments>-->
-                            <!--<jvmArguments>-->
-                                 <!-- -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000-->
-                            <!--</jvmArguments>-->
-
-                        <!--</configuration>-->
-
-                        <!--<executions>-->
-                            <!--<execution>-->
-                                <!--<id>pre-integration-test</id>-->
-                                <!--<goals>-->
-                                    <!--<goal>start</goal>-->
-                                <!--</goals>-->
-                            <!--</execution>-->
-                            <!--<execution>-->
-                                <!--<id>post-integration-test</id>-->
-                                <!--<goals>-->
-                                    <!--<goal>stop</goal>-->
-                                <!--</goals>-->
-                            <!--</execution>-->
-                        <!--</executions>-->
-
-                    <!--</plugin>-->
-
-                    <!--<plugin>-->
-                        <!--<groupId>org.codehaus.cargo</groupId>-->
-                        <!--<artifactId>cargo-maven2-plugin</artifactId>-->
-                        <!--<version>1.4.15</version>-->
-                        <!--<configuration>-->
-                            <!--<container>-->
-                                <!--<containerId>tomcat8x</containerId>-->
-                                <!--<zipUrlInstaller>-->
-                                    <!--<url>-->
-                                        <!--http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.24/bin/apache-tomcat-8.0.24.zip-->
-                                    <!--</url>-->
-                                <!--</zipUrlInstaller>-->
-                                <!--<systemProperties>-->
-                                    <!--<fd.integration>amqp</fd.integration>-->
-                                    <!--<fd.config>${project.basedir}/src/test/resources/config.properties</fd.config>-->
-                                    <!--<log4j.configuration>-->
-                                        <!--file://${project.basedir}/src/test/resources/fd-search/log4j-search.xml-->
-                                    <!--</log4j.configuration>-->
-                                    <!--<java.awt.headless>true</java.awt.headless>-->
-                                    <!--<spring.profiles.active>integration</spring.profiles.active>-->
-                                    <!--<fd.logLevel>${org.fd.logLevel}</fd.logLevel>-->
-                                <!--</systemProperties>-->
-                            <!--</container>-->
-                            <!--<configuration>-->
-                                <!--<home>${project.build.directory}/catalina-base</home>-->
-                                <!--<properties>-->
-                                    <!--<cargo.servlet.port>9081</cargo.servlet.port>-->
-                                    <!--<cargo.rmi.port>9086</cargo.rmi.port>-->
-                                    <!--<cargo.tomcat.ajp.port>9087</cargo.tomcat.ajp.port>-->
-                                    <!--&lt;!&ndash;the debug agent tends to cause a hang when the tomcat instance running fd-search shuts down, so please don't commit with this uncommented &ndash;&gt;-->
-                                    <!--&lt;!&ndash;<cargo.jvmargs>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n -Xms512m -Xmx1024m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -Dspring.profiles.active=integration</cargo.jvmargs>&ndash;&gt;-->
-                                    <!--<cargo.jvmargs>-Xms1024m -Xmx1024m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC-->
-                                        <!-- -Dspring.profiles.active=integration-->
-                                    <!--</cargo.jvmargs>-->
-                                <!--</properties>-->
-                                <!--<files>-->
-                                    <!--<copy>-->
-                                        <!--&lt;!&ndash; Not currently working. TC should be able to read this but it doesn't I'm not doing it right&ndash;&gt;-->
-                                        <!--<file>${project.basedir}/src/test/resources/fd-search/fd-int-settings.json-->
-                                        <!--</file>-->
-                                        <!--<todir>conf/Catalina/localhost/</todir>-->
-                                        <!--<configfile>true</configfile>-->
-                                        <!--<overwrite>true</overwrite>-->
-                                    <!--</copy>-->
-                                <!--</files>-->
-                            <!--</configuration>-->
-                            <!--<deployables>-->
-                                <!--<deployable>-->
-                                    <!--<groupId>org.flockdata</groupId>-->
-                                    <!--<artifactId>fd-search</artifactId>-->
-                                    <!--<type>jar</type>-->
-                                    <!--<properties>-->
-                                        <!--<context>/fds</context>-->
-                                    <!--</properties>-->
-                                <!--</deployable>-->
-                            <!--</deployables>-->
-                            <!--<packager>-->
-                                <!--<outputLocation>${project.build.directory}/tomcat-packaged</outputLocation>-->
-                            <!--</packager>-->
-                        <!--</configuration>-->
-                        <!--<executions>-->
-                            <!--<execution>-->
-                                <!--<id>start-server</id>-->
-                                <!--<phase>pre-integration-test</phase>-->
-                                <!--<goals>-->
-                                    <!--<goal>start</goal>-->
-                                <!--</goals>-->
-                            <!--</execution>-->
-                            <!--<execution>-->
-                                <!--<id>stop-server</id>-->
-                                <!--<phase>post-integration-test</phase>-->
-                                <!--<goals>-->
-                                    <!--<goal>stop</goal>-->
-                                <!--</goals>-->
-                            <!--</execution>-->
-                        <!--</executions>-->
-                    <!--</plugin>-->
                 </plugins>
             </build>
         </profile>
